fix: content render in relation to header - move content under header - move scrollbar within header and bottom of viewport

--- a/GUI/ETVR/src/styles/header-wrapper.css
+++ b/GUI/ETVR/src/styles/header-wrapper.css
@@ -15,7 +15,7 @@
     flex-direction: row;
     justify-content: space-around;
     position: fixed;
-    top: calc(titlebar - 35px);
+    top: calc(titlebar - 30px);
     left: 0;
     right: 0;
     z-index: 1;
