--- a/GUI/ETVR/src/styles/scrollbar.css
+++ b/GUI/ETVR/src/styles/scrollbar.css
@@ -1,21 +1,23 @@
 /* width */
 ::-webkit-scrollbar {
-  width: 6px;
+    width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+    margin-top: 99px;
+    margin-bottom: 45px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #6d7faeb4;
-  border-radius: 10px;
+    background: #6d7faeb4;
+    border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #6d7fae;
+    background: #6d7fae;
 }
